# swc-plugin-coverage-instrument

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: ci_main.yml  release.yml
spec/swc-coverage-custom-transform/: Cargo.toml  package.json
spec/swc-coverage-custom-transform/src/: lib.rs
spec/swc-coverage-instrument-wasm/: Cargo.toml
spec/util/: verifier.ts
