[package]
edition = "2021"
name    = "swc-coverage-custom-transform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.2.4"

[dependencies]
anyhow = "1.0.70"
backtrace = "0.3.67"
napi = { version = "3.4.0", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "3.3.0", default-features = false, features = [
  "type-def",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["unbounded_depth"] }
swc-coverage-instrument = { version = "0.0.32", path = "../../packages/swc-coverage-instrument" }
swc_core = { version = "48.0.2", features = [
  "common_concurrent",
  "ecma_transforms",
  "ecma_ast",
  "allocator_node",
  "ecma_visit",
  "base_node",
] }
swc_error_reporters = { version = "20.0.0" }
