[package]
edition = "2021"
name    = "swc-coverage-instrument-wasm"
version = "0.1.0"

  [package.metadata.wasm-pack.profile.release]
  wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom          = { workspace = true, features = ["js"] }
serde              = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen       = { workspace = true, features = ["serde-serialize"] }

swc-coverage-instrument = { workspace = true }
